# digimovie-scraper

./: .env  Cargo.toml  Dockerfile  README.md
src/: main.rs
