[package]
name = "digimovie-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.22.0"
mongodb = "2.0"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"